# ArchBot

./: .gitignore  LICENSE  PKGBUILD  README.md  archWikiAssistant.py  archWikiScraper.py  archWikiVectorizer.py  pyproject.toml  requirements.txt  run_web.py  scrape_log.txt  setup.py  start_web.sh
Chunker/: README.md  chunker.py
Embedder/: README.md  embedder.py
Refiner/: README.md  refiner.py
Retriever/: README.md  retriever.py
arch_wiki_data/: $XDG CONFIG DIRS.json  .NET Core (Português).json  .SRCINFO (Português).json  .inputrc.json  1C Enterprise (Русский).json  32-bit package guidelines (Português).json  32bit chroot (Česky).json  3D Mouse.json  3D Printing.json  3G and GPRS modems with pppd (Русский).json  3G and GPRS modems with pppd alone (Русский).json  64-bit FAQ (Español).json  64-bit FAQ (Italiano).json  64-bit FAQ (Česky).json  64-bit FAQ (Ελληνικά).json  64-bit FAQ (Русский).json  64-bit FAQ (Српски).json  64-bit FAQ (Українська).json  64-bit FAQ (العربية).json  64-бит ЧаВо.json  7-Zip (Español).json  7-Zip (Русский).json  7-Zip.json  7zip.json  ABS (Dansk).json  ABS (Español).json  ABS (Português).json  ABS (日本語).json  ABS - El Sistema de Construcción de Arch (Español).json  ABS - Il Sistema Di Compilazione di Arch (Italiano).json  ABS - The Arch Build System (Česky).json  ABS - The Arch Build System (Ελληνικά).json  ABS - The Arch Build System (日本語).json  ABS - The Arch Build System (正體中文).json  ABS - 아치 빌드 시스템.json  ABS FAQ (Русский).json  ABS FAQ (日本語).json  ABS FAQ.json  ACL (Español).json  ACL (Português).json  (+7685 more)
arch_wiki_data_english/: .AURINFO.json  .NET (Polski).json  .NET Core (Español).json  .NET Core.json  .SRCINFO.json  .Xdefaults.json  .Xresources.json  .bashrc (Русский).json  .bashrc.json  .pam environment.json  .xinitrc (Español).json  .xinitrc.json  (+2624 more)
(+3525 files in other folders)
